# openpifpaf_posetrack

./: .gitattributes  .gitignore  .pylintrc  LICENSE  MANIFEST.in  README.md  setup.cfg  setup.py
.github/workflows/: pypi-deploy.yml  tests.yml
openpifpaf_posetrack/: __init__.py  _version.py  backbone.py  cocokpst.py  collate.py  constants.py  datasets.py  headmeta.py  heads.py  imagetotracking.py  posetrack2018.py  signal.py
openpifpaf_posetrack/decoder/: pose_similarity.py  tracking_pose.py
openpifpaf_posetrack/decoder/pose_distance/: euclidean.py  oks.py
openpifpaf_posetrack/encoder/: annrescaler.py  single_image.py  tcaf.py
openpifpaf_posetrack/transforms/: scale.py
openpifpaf_posetrack/visualizer/: __init__.py  tcaf.py
openpifpaf_tracker/: __init__.py  _version.py  backbone.py  benchmark.py  cocokpst.py  collate.py  crowdpose.py  datasets.py  draw_poses.py  headmeta.py  heads.py  imagetotracking.py  metric.py  posetrack2017.py  posetrack2018.py
openpifpaf_tracker/decoder/: __init__.py  oks.py  pose_similarity.py  track_annotation.py  track_base.py  tracking_pose.py
openpifpaf_tracker/decoder/generator/: pose_similarity.py  track_base.py  tracking_pose.py
openpifpaf_tracker/decoder/pose_distance/: crafted.py  euclidean.py  (+1 more)
openpifpaf_tracker/encoder/: __init__.py  annrescaler.py  single_image.py  tcaf.py
openpifpaf_tracker/transforms/: __init__.py  blank_past.py  camera_shift.py  crop.py  encoders.py  image.py  impute.py  sample_pairing.py  single_image.py
openpifpaf_tracker/visualizer/: __init__.py  multitracking.py
tests/: test_clis.py
(+2 files in other folders)
