[options]
setup_requires =
    numpy
    cython

[tool:pytest]
testpaths = tests

[versioneer]
VCS = git
style = pep440
versionfile_source = openpifpaf_tracker/_version.py
#versionfile_build =
tag_prefix = v
#parentdir_prefix =

[pycodestyle]
max-line-length=119
ignore=E741,W503
exclude=openpifpaf_tracker/__init__.py
